--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -30,22 +30,37 @@
 
             <br><br>
 
+            <div class="alert {{ classe.value }}" role="alert">
+                Texto colorido conforme valor do combobox.
+            </div>
+
             <div class="alert" role="alert"
                 [class.alert-success]="classe.value == 'alert-success'">
                 Sucesso
             </div>
+
+
+            <!-- CLASS BINDIND -->
             <div class="alert" role="alert"
                 [class.alert-info]="classe.value == 'alert-info'">
                 Informações
             </div>
+
             <div class="alert" role="alert"
                 [class.alert-warning]="classe.value == 'alert-warning'">
                 Avisos
             </div>
+
             <div class="alert" role="alert"
                 [class.alert-danger]="classe.value == 'alert-danger'">
                 Erro
             </div>
+
+            <div class="alert alert-danger" role="alert"
+                [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
+                Esse texto só aparece em caso de erro.
+            </div>
+
         </div>
 
     </article>
