--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<app-exemplo-ng-content>
+    <div class="titulo">
+        Exemplo de Título
+    </div>
+    <div class="subtitulo">
+        Subtítulo
+    </div>
+    <div class="paragrafo">
+        Conteúdo de parágrafo passado para o componente.
+    </div>
+</app-exemplo-ng-content>
