--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-exemplo-ng-content>
+<!-- <app-exemplo-ng-content>
     <div class="titulo">
         Exemplo de Título
     </div>
@@ -8,4 +8,6 @@
     <div class="paragrafo">
         Conteúdo de parágrafo passado para o componente.
     </div>
-</app-exemplo-ng-content>
+</app-exemplo-ng-content> -->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
