Atualiza 'diretivas' com 'diretivas-customizadas' (hostlistener / hostbinding)

--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-exemplo-ng-content>
+<!-- app-exemplo-ng-content>
     <div class="titulo">
         Exemplo de Título
     </div>
@@ -8,6 +8,7 @@
     <div class="paragrafo">
         Conteúdo de parágrafo passado para o componente.
     </div>
-</app-exemplo-ng-content> -->
+</app-exemplo-ng-content-->
 
 <app-diretivas-customizadas></app-diretivas-customizadas>
+
